--- a/deployapps.yml
+++ b/deployapps.yml
@@ -8,5 +8,5 @@
     - name: Deploy applications on "{{ ansible_hostname }}"
       win_chocolatey:
         name: "{{ item }}"
-        state: present
+        state: "{{ apps_state }}"
       with_items: "{{ apps }}"
