--- a/managelocalgroups.yml
+++ b/managelocalgroups.yml
@@ -5,7 +5,7 @@
   # become_method: runas
 
   tasks:
-    - name: Manage Active Directory group "{{ local_group_name }}"
+    - name: Manage Local group "{{ local_group_name }}" on "{{ ansible_hostname }}"
       win_group_membership:
          name: "{{ local_group_name }}"
          members: "{{ ad_group_members }}"
