--- a/deployapps.yml
+++ b/deployapps.yml
@@ -3,6 +3,9 @@
 - hosts: all
   # become: true
   # become_method: runas
+  vars:
+    apps_state: ""
+    apps: ""
 
   tasks:
     - name: Deploy applications on "{{ ansible_hostname }}"
